--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.0",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.5",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1"
   }
